frontend/test/should_fail/setmax_exec.grg
sequence s
{
	{{ set<Node>{}.max() != null }}
}
